Now dynamically defining attributes